# snklib

./: .gitignore  README.md  pyproject.toml
src/snklib/: common.py
src/snklib/structure/: __init__.py  access.py  event.py  instance.py  scenario.py
src/snklib/utils/: __init__.py  comm.py  fio.py  formatter.py  tool.py  yaml_wrapper.py
