[project]

name = "snklib"
version = "0.0.1"

description = "A library for Space Networking Kits (SNK)"

readme = "README.md"

requires-python = ">=3.5"

license = {file = "LICENSE.txt"}

authors = [
  {name = "w.xt", email = "wxt.icu@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/xdr940/snklib"
